<resources>
    <string name="app_name" translatable="false">AudioPatch</string>
    <string name="title_activity_audio_player">audio_player</string>
    <string name="title_activity_audio_search">audioSearch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo">AudioPatch Logo</string>

    <string name="username">Enter a username</string>
    <string name="secondary_information">Host or Join to begin a session</string>

    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort by</string>
    <string name="about">About</string>
    <string name="connect_and_share">Connect &amp; Share</string>
    <string name="host">Host</string>
    <string name="join">Join</string>

    <string name="title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="dot">•</string>
    <string name="hash_tag">#</string>
    <string name="submitted_by">Submitted by</string>
    <string name="submitter">%1$s</string>
    <string name="timestamp">0:00</string>
    <string name="nav_header_title">AudioPatch</string>
    <string name="nav_header_subtitle">connor.colabella@redowul.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="options_clear_queue">Clear Queue</string>
    <string name="action_addAudio">Add to playlist</string>
    <string name="item">Item</string>
    <string name="package_name">com.colabella.connor</string>
    <string name="next_song_tip">Awaiting update from host…</string>

    <string name="alphabetical">A to Z</string>
    <string name="omegapsical">Z to A</string>
    <string name="shortest_duration">Shortest Duration</string>
    <string name="longest_duration">Longest Duration</string>
    <string name="total_albums">Total Albums</string>

    <string name="download">Download</string>
    <string name="nearby">Nearby</string>

    <string name="null_item">Selected file is corrupted; cannot submit it</string>
    <string name="external_storage_permission">Permission to access your external storage denied</string>
    <string name="endpoint_found">Endpoint found! Requesting access…</string>
    <string name="no_endpoints_found">No endpoints discovered.</string>
    <string name="connection_to">Connection to</string>
    <string name="was_successful">was successful.</string>
    <string name="connection_rejected">Connection rejected</string>
    <string name="connection_error_occurred">Connection error occurred.</string>
    <string name="disconnection_successful">Disconnection successful.</string>




</resources>
