<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sortMenu_alphabetical"
        android:title="@string/alphabetical" />

    <item
        android:id="@+id/sortMenu_omegapsical"
        android:title="@string/omegapsical" />

    <item
        android:id="@+id/sortMenu_artist"
        android:title="@string/artist" />

    <item
        android:id="@+id/sortMenu_album"
        android:title="@string/album" />

    <item
        android:id="@+id/sortMenu_shortestDuration"
        android:title="@string/shortest_duration" />

    <item
        android:id="@+id/sortMenu_longestDuration"
        android:title="@string/longest_duration" />
    <item
        android:id="@+id/sortMenu_totalAlbums"
        android:title="@string/total_albums" />
</menu>
