<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_36dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_file_downloads_24dp"
            android:title="@string/downloads" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_24dp"
            android:title="@string/history"
            android:textColor="@color/textColor"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_36dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_outline_36dp"
            android:title="@string/about" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/connect_and_share" >
            <menu>
                <item
                    android:id="@+id/nav_advertise"
                    android:icon="@drawable/bluetooth_searching_36dp"
                    android:title="@string/host" />
                <item
                    android:id="@+id/nav_discover"
                    app:itemTextColor="@color/colorPrimary"
                    android:icon="@drawable/bluetooth_connected_36dp"
                    android:title="@string/join"/>
            </menu>
        </item>
    </group>
</menu>