<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="182dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/logoHeader"
        android:layout_width="229dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/audiopatchheader"
        android:contentDescription="@string/logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoHeader">

        <TextView
            android:id="@+id/nickNameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/secondaryInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/secondary_information" />

    </FrameLayout>

</RelativeLayout>