<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:id="@+id/item_panel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    card_view:cardCornerRadius="4dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/recyclerViewDark"
    android:gravity="center_vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_album_art"
        android:layout_width="@dimen/recyclerView_albumArt_item_size"
        android:layout_height="@dimen/recyclerView_albumArt_item_size"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/item_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_title"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@id/item_artist"
        android:layout_toRightOf="@id/item_artist"
        android:orientation="horizontal"
        android:singleLine="true"
        android:text="@string/timestamp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_album_art"
        android:layout_toRightOf="@id/item_album_art"
        android:ellipsize="end"
        android:paddingTop="4dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:text="@string/title"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/item_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_title"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@id/item_album_art"
        android:layout_toRightOf="@id/item_album_art"
        android:ellipsize="end"
        android:orientation="horizontal"
        android:singleLine="true"
        android:text="@string/artist"
        android:textSize="12sp"/>
</RelativeLayout>
</android.support.v7.widget.CardView>