<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_number_panel"
        android:background="@color/recyclerViewDark"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/item_panel"
        android:layout_alignBottom="@id/item_panel"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:singleLine="true"
            android:text="@string/hashtag"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_panel"
        android:layout_toRightOf="@id/item_number_panel"
        android:layout_toEndOf="@id/item_number_panel"
        android:background="@color/recyclerViewDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:paddingTop="12dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingBottom="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_duration"
            android:layout_toRightOf="@id/item_artist"
            android:layout_toEndOf="@id/item_artist"
            android:layout_below="@+id/item_title"
            android:textSize = "12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="0dp"
            android:singleLine="true"
            android:text="@string/timestamp">
        </TextView>

        <TextView
            android:id="@+id/item_title"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
            android:text="@string/title">
        </TextView>

        <TextView
            android:id="@+id/item_artist"
            android:layout_below="@+id/item_title"
            android:textSize = "12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="0dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/artist">
        </TextView>

    </RelativeLayout>
</RelativeLayout>