<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qhutch.bottomsheetlayout.BottomSheetLayout
            android:id="@+id/bottom_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:background="@color/recyclerViewDark"
            app:collapsedHeight="56dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/bottom_sheet_album_cover"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:alpha="0.4"
                android:scaleType="centerCrop"
                app:layout_anchor="@+id/bottom_sheet_layout"
                app:layout_anchorGravity="center" />

            <RelativeLayout
                android:id="@+id/bottom_sheet_layout_capstone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/recyclerViewDark">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:elevation="0dp">

                <SeekBar
                    android:id="@+id/bottom_sheet_capstone_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:thumb="@color/recyclerViewAccent"
                    android:layout_marginLeft="56dp"
                    android:layout_marginStart="56dp"
                    android:paddingStart="0dp"
                    android:paddingBottom="5dp"
                    android:paddingEnd="0dp"
                    android:progressDrawable="@drawable/capstone_seekbar_style" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/bottom_sheet_current_album_cover_small"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/bottom_sheet_capstone_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@id/expand_bottom_sheet_button"
                    android:layout_toLeftOf="@id/expand_bottom_sheet_button"
                    android:layout_toEndOf="@id/bottom_sheet_current_album_cover_small"
                    android:layout_toRightOf="@id/bottom_sheet_current_album_cover_small"
                    android:orientation="horizontal"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bottom_sheet_capstone_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bottom_sheet_capstone_title"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/expand_bottom_sheet_button"
                    android:layout_toLeftOf="@id/expand_bottom_sheet_button"
                    android:layout_toEndOf="@id/bottom_sheet_current_album_cover_small"
                    android:layout_toRightOf="@id/bottom_sheet_current_album_cover_small"
                    android:orientation="horizontal"
                    android:singleLine="true"
                    android:text="@string/artist"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/expand_bottom_sheet_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/arrow_drop_up_24dp"
                    android:gravity="end" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/audio_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bottom_sheet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="58dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bottom_sheet_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/bottom_sheet_title"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    android:singleLine="true"
                    android:text="@string/artist"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bottom_sheet_submitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal"
                    android:singleLine="true"
                    android:layout_below="@+id/bottom_sheet_artist"
                    android:text="@string/submitter"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_toStartOf="@id/play_button"
                    android:layout_toLeftOf="@id/play_button"
                    android:background="@drawable/ic_skip_previous_24dp"
                    android:onClick="onBottomToolbarItemClick"
                    android:visibility="visible"
                    android:layout_marginTop="48dp"
                    android:layout_below="@+id/bottom_sheet_submitter" />

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/ic_play_24dp"
                    android:onClick="onBottomToolbarItemClick"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="48dp"
                    android:layout_below="@+id/bottom_sheet_submitter" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toEndOf="@id/play_button"
                    android:layout_toRightOf="@id/play_button"
                    android:background="@drawable/ic_skip_next_24dp"
                    android:onClick="onBottomToolbarItemClick"
                    android:visibility="visible"
                    android:layout_marginTop="48dp"
                    android:layout_below="@+id/bottom_sheet_submitter" />
            </RelativeLayout>
        </com.qhutch.bottomsheetlayout.BottomSheetLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/seekbar_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="48dp"
            android:text="@string/timestamp">
        </TextView>

        <SeekBar
            android:id="@+id/bottom_sheet_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/seekbar_position"
            android:layout_toEndOf="@id/seekbar_position"
            android:layout_toLeftOf="@id/audio_length"
            android:layout_toStartOf="@id/audio_length"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="48dp"
            android:alpha=".80"
            android:progressDrawable="@drawable/bottom_sheet_seekbar_style"
            android:theme="@style/ProgressBar"
            android:thumb="@drawable/bottom_sheet_seekbar_thumb" />

        <TextView
            android:id="@+id/audio_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/timestamp">
        </TextView>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>